traversal.snake.Snake.scala.error
Compilation error:
Snake:8: warning: a pure expression does nothing in statement position; you may be omitting necessary parentheses
      return true
             ^Snake:8: warning: enclosing method positionFinale has result type Unit: return value discarded
      return true
      ^Snake:13: warning: a pure expression does nothing in statement position; you may be omitting necessary parentheses
        return true
               ^Snake:13: warning: enclosing method positionFinale has result type Unit: return value discarded
        return true
        ^Snake:20: warning: a pure expression does nothing in statement position; you may be omitting necessary parentheses
        return true
               ^Snake:20: warning: enclosing method positionFinale has result type Unit: return value discarded
        return true
        ^Snake:23: warning: a pure expression does nothing in statement position; you may be omitting necessary parentheses
    else return false
                ^Snake:23: warning: enclosing method positionFinale has result type Unit: return value discarded
    else return false
         ^Snake:46: error: value unary_! is not a member of Unit
  while(!positionFinale())
        ^